fixed issue with overflow scrolling and plugged in mice

--- a/sites/all/themes/symbio/assets/scss/_mixins.scss
+++ b/sites/all/themes/symbio/assets/scss/_mixins.scss
@@ -32,11 +32,15 @@
 
 @mixin scroll {
   white-space: nowrap;
-  overflow-x: scroll;
-  overflow-y: visible;
+  overflow-y: hidden;
   position: relative;
   -ms-overflow-style: none;
   -webkit-overflow-scrolling: touch;
+
+  @include breakpoint(medium down) {
+    overflow-x: scroll;
+  }
+
 }
 
 @mixin see-thru-border {
